--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sass": "^1.77.6",
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
